refactor: 섹터 차트 메서드 개선